margins should be fixed on mobile hurray!

--- a/public/css/webcss.css
+++ b/public/css/webcss.css
@@ -1,11 +1,22 @@
 body, html{
     height: 100%;
-    background-color: #fff !important;
-    margin: 0px;
-    padding: 0px;
+    width: 100%;
 }
 
+body {
+  margin:0;
+  min-height:100vh;
+}
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.bottom {
+  flex:1;
+  background-color: #f9f9f9;
+}
 
 .title {
   font-family: 'Sanchez', sans-serif;
@@ -63,10 +74,14 @@ body, html{
 }
 
 .bgGrey2 {
-  padding-top:80px;
   background-color: #f9f9f9;
-  height: 100vh;
-  overflow:hidden;
+  height:100%;
+}
+
+.aboutPadding {
+  padding-top:80px;
+  padding-bottom: 80px;
+
 }
 
 .bgWhite {
